# document-processing-pipeline

./: README.md  pyproject.toml
src/document_processing_pipeline/: __init__.py  domain.py  extraction.py  ingestion.py  main.py  processing.py  repository.py  schemas.py
tests/: test_api.py  test_ingestion_extraction.py  test_processing.py
