[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-processing-pipeline"
version = "0.1.0"
description = "Training document processing pipeline with ingestion, extraction, and processing jobs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.0,<3.0",
    "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/document_processing_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
